@@ -179,6 +179,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #16618: Make glob.glob match consistently across strings and bytes
+  regarding leading dots.  Patch by Serhiy Storchaka.
+
 - Issue #16702: test_urllib2_localnet tests now correctly ignores proxies for
   localhost tests.
 
